Converting Text to Mesh #30293

Closed
opened 2012-02-21 20:47:29 +01:00 by Andy Finegan · 14 comments

%%%When converting a text object to a mesh causes blender to crash - this has been happening to me ever since 2.60, previous versions are ok.
This does not happen with the default font & does not happen with every .ttf type font but most of them. Included in the .blend file are 2 text
docs with more info. Thanks

Windows XP sp3 32bit
2.60/61/62 versions%%%

%%%When converting a text object to a mesh causes blender to crash - this has been happening to me ever since 2.60, previous versions are ok. This does not happen with the default font & does not happen with every .ttf type font but most of them. Included in the .blend file are 2 text docs with more info. Thanks Windows XP sp3 32bit 2.60/61/62 versions%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Tested with many ttf fonts under linux, both with official 2.62 and latest (44297, BMesh-merged), including dejavu, liberation, droid, gentium, tomsontalks (comic-like), and other fancy ones.

Got no crash, everything seems to work OK for me… Perhaps Win fonts are bad? ;) Or maybe an arch problem (I’m on linux64)?%%%

%%%Tested with many ttf fonts under linux, both with official 2.62 and latest (44297, BMesh-merged), including dejavu, liberation, droid, gentium, tomsontalks (comic-like), and other fancy ones. Got no crash, everything seems to work OK for me… Perhaps Win fonts are bad? ;) Or maybe an arch problem (I’m on linux64)?%%%

%%%I can't reproduce the issue on my laptop with windows system. This might be an opengl-related bug. Please check if you're using the latest drivers from intel's download center (it's a bit difficult to follow their numbering in this case -- reporting by opengl and by site versions are using different numbering rules).
If upgrading driver wouldn't help, you might check if it's indeed an video driver issue by downloading opengl32.dll from and placing it rear blender.exe (it'll switch blender to fully software mode and bugs in drivers shouldn't affect on it's stability, but it'll make blender slower).%%%

%%%I can't reproduce the issue on my laptop with windows system. This might be an opengl-related bug. Please check if you're using the latest drivers from intel's download center (it's a bit difficult to follow their numbering in this case -- reporting by opengl and by site versions are using different numbering rules). If upgrading driver wouldn't help, you might check if it's indeed an video driver issue by downloading opengl32.dll from and placing it rear blender.exe (it'll switch blender to fully software mode and bugs in drivers shouldn't affect on it's stability, but it'll make blender slower).%%%
Author

%%%Thank you Bastien & Sergey for looking into this , but as I stated before this has only occcured since 2.60 - previous versions have no problem converting to mesh.
I have done further testing in 2.62 & these are my results; delete default cube & add text, chage font to some .ttf type, press ALT + C = no problem it converts. Undo, extrude it (.100) press ALT + C = no problem it converts. Undo & add bevel depth (.01) press ALT + C = no problem it converts. Undo & add resolution (2) press ALT + C = CRASH. Giving the text object just a bevel depth & converting it works but add in the resolution & it crashes. I can reproduce this every time in 2.60/61/62 but 2.59 works with out any problem. I realize that if you can not reproduce the problem that leaves you little to go on but maybe this will narrow down the search I hope. In your response it mentioned the Intel drivers which I updated years ago, but I still do not understand why it works in 2.59 & earlier. I have also tried this on another pc I have (same os) with the same results. Thank You for all your hard work.
Regards; Andy Finegan%%%

%%%Thank you Bastien & Sergey for looking into this , but as I stated before this has only occcured since 2.60 - previous versions have no problem converting to mesh. I have done further testing in 2.62 & these are my results; delete default cube & add text, chage font to some .ttf type, press ALT + C = no problem it converts. Undo, extrude it (.100) press ALT + C = no problem it converts. Undo & add bevel depth (.01) press ALT + C = no problem it converts. Undo & add resolution (2) press ALT + C = CRASH. Giving the text object just a bevel depth & converting it works but add in the resolution & it crashes. I can reproduce this every time in 2.60/61/62 but 2.59 works with out any problem. I realize that if you can not reproduce the problem that leaves you little to go on but maybe this will narrow down the search I hope. In your response it mentioned the Intel drivers which I updated years ago, but I still do not understand why it works in 2.59 & earlier. I have also tried this on another pc I have (same os) with the same results. Thank You for all your hard work. Regards; Andy Finegan%%%

%%%If this is not a graphics card issue, then I can see two possible reasons others can't redo:

  • The c:/windows/fonts/times.ttf on windows XP is different than other windows versions.
  • It's a 32 bit specific issue that does not happen on 64 bit.%%%
%%%If this is not a graphics card issue, then I can see two possible reasons others can't redo: * The c:/windows/fonts/times.ttf on windows XP is different than other windows versions. * It's a 32 bit specific issue that does not happen on 64 bit.%%%
Author

%%%Well thanks for trying but as I have stated several times its specific to 2.60/61/62 - 2.59 works fine. I have narrowed down what appears to be causing the problem (adding resolution) I have downloaded some .ttf fonts just to see if it was something in/on my system but those fonts also caused the crash when resolution was added. Thanks again%%%

%%%Well thanks for trying but as I have stated several times its specific to 2.60/61/62 - 2.59 works fine. I have narrowed down what appears to be causing the problem (adding resolution) I have downloaded some .ttf fonts just to see if it was something in/on my system but those fonts also caused the crash when resolution was added. Thanks again%%%

%%%@andy-28
In file you've attached here i can see such lines http://www.pasteall.org/29447 (that's from Text.001). Where you've got this lines? Offset seems to be an address in memory on which issue might've been happen. Also, ialmgicd.dll is a part of intel 82845G/GL/GE/PE/GV video chipset driver.
There were some changes in how object drawing happens since 2.59 and some changes might've been caused crash in this driver. So please, download latest video driver from intel's download center and see if it helps. Also, please try to download http://download.blender.org/ftp/incoming/softwaregl/win32/opengl32.dll and place it in the same directory as blender.exe and try to convert text to mesh.
Another thing which might help you is to change using VBOs (if you didn't use them before try to enable, if you've used them try to disable them).

@brecht
I've tried windows 7 32/64 bit, windows xp 32 bit in VM, linux 32/64 bit with different fonts and didn't have crash here. That lines with ialmgicd.dll makes me feel that video driver is somehow related into crash.%%%

%%%@andy-28 In file you've attached here i can see such lines http://www.pasteall.org/29447 (that's from Text.001). Where you've got this lines? Offset seems to be an address in memory on which issue might've been happen. Also, ialmgicd.dll is a part of intel 82845G/GL/GE/PE/GV video chipset driver. There were some changes in how object drawing happens since 2.59 and some changes might've been caused crash in this driver. So please, download latest video driver from intel's download center and see if it helps. Also, please try to download http://download.blender.org/ftp/incoming/softwaregl/win32/opengl32.dll and place it in the same directory as blender.exe and try to convert text to mesh. Another thing which might help you is to change using VBOs (if you didn't use them before try to enable, if you've used them try to disable them). @brecht I've tried windows 7 32/64 bit, windows xp 32 bit in VM, linux 32/64 bit with different fonts and didn't have crash here. That lines with ialmgicd.dll makes me feel that video driver is somehow related into crash.%%%
Author

%%% Thanks for the continued help -
"In file you've attached here i can see such lines http://www.pasteall.org/29447
(that's from Text.001). Where you've got this lines? Offset seems to be an
address in memory on which issue might've been happen. Also, ialmgicd.dll is a
part of intel 82845G/GL/GE/PE/GV video chipset driver."
I'm not sure what any of that meant, I only download blender from the Blender.org site.
"Another thing which might help you is to change using VBOs (if you didn't use
them before try to enable, if you've used them try to disable them)."
I use all the default settings other then some theme changes but changing the VBO did not help things. I downloaded another copy of 2.62win32 (not the installed)(I do not have blender installed on my pc) dropped the opengl32.dll into that folder, opened up a new file, recreated the text with a windows .ttf font (times) added the bevel & resolution ALT + C and it worked without crashing!!! Yeah, but on a side note placing that .dll in the folder made blender run extremely slow & was using 100% of cpu most of the time. As far as the video drivers go I have the last version they released which was in 2005. There is an optional one listed & I have downloaded it - I will install it & see if it makes a differance.
As far as this issue goes you did say that object drawing was changed since 2.59 & that is what I understand & makes sense relating to this issue. There is no doubt that the old Intel built in graphics cards were not the best, and having said that, this is an old pc & I understand that taking the time to hunt for issues that relate to that are not productive for you guys or the future of blender - so I do apperciate the time you guys have spent looking into this matter. Thanks a million & keep up the great work.
Best regards Andy Finegan%%%

%%% Thanks for the continued help - "In file you've attached here i can see such lines http://www.pasteall.org/29447 (that's from Text.001). Where you've got this lines? Offset seems to be an address in memory on which issue might've been happen. Also, ialmgicd.dll is a part of intel 82845G/GL/GE/PE/GV video chipset driver." I'm not sure what any of that meant, I only download blender from the Blender.org site. "Another thing which might help you is to change using VBOs (if you didn't use them before try to enable, if you've used them try to disable them)." I use all the default settings other then some theme changes but changing the VBO did not help things. I downloaded another copy of 2.62win32 (not the installed)(I do not have blender installed on my pc) dropped the opengl32.dll into that folder, opened up a new file, recreated the text with a windows .ttf font (times) added the bevel & resolution ALT + C and it worked without crashing!!! Yeah, but on a side note placing that .dll in the folder made blender run extremely slow & was using 100% of cpu most of the time. As far as the video drivers go I have the last version they released which was in 2005. There is an optional one listed & I have downloaded it - I will install it & see if it makes a differance. As far as this issue goes you did say that object drawing was changed since 2.59 & that is what I understand & makes sense relating to this issue. There is no doubt that the old Intel built in graphics cards were not the best, and having said that, this is an old pc & I understand that taking the time to hunt for issues that relate to that are not productive for you guys or the future of blender - so I do apperciate the time you guys have spent looking into this matter. Thanks a million & keep up the great work. Best regards Andy Finegan%%%

%%%Moved from Blender 2.6 Bug Tracker to OpenGL errors%%%

%%%Moved from Blender 2.6 Bug Tracker to OpenGL errors%%%

%%%Yep, using that dll switches blender to fully sowftware mode and makes it much slower. This indeed a video driver issue. Hopefully you'll find updates for driver and it'll help you.
Quite optimistic news is that i've managed to reproduce crash on my old laptop, hopefully i'll can trace down the issue but it'll take a while.
Moving report to OpenGL tracker.%%%

%%%Yep, using that dll switches blender to fully sowftware mode and makes it much slower. This indeed a video driver issue. Hopefully you'll find updates for driver and it'll help you. Quite optimistic news is that i've managed to reproduce crash on my old laptop, hopefully i'll can trace down the issue but it'll take a while. Moving report to OpenGL tracker.%%%

%%%I've just commited patch which prevents crash on my laptop with gme965 videocard. It's in revision 44433 and hopefully it'll be available at http://builder.blender.org/download/ relatively soon. Also hope it'll fix your issue too :)%%%

%%%I've just commited patch which prevents crash on my laptop with gme965 videocard. It's in revision 44433 and hopefully it'll be available at http://builder.blender.org/download/ relatively soon. Also hope it'll fix your issue too :)%%%
Author

%%% TO: Sergey
I have downloaded 2.62 ver44541 from the link you provided & tested 10 different .ttf fonts without any problems, every thing is working as it should be. I would say this issue has been fixed / resolved. Thank you for your dedication & hard work !!!
Best regards: Andy Finegan%%%

%%% TO: Sergey I have downloaded 2.62 ver44541 from the link you provided & tested 10 different .ttf fonts without any problems, every thing is working as it should be. I would say this issue has been fixed / resolved. Thank you for your dedication & hard work !!! Best regards: Andy Finegan%%%

%%%Cool to hear this! Closing report then. Have a happy blending :)%%%

%%%Cool to hear this! Closing report then. Have a happy blending :)%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30293
No description provided.