source/blender/gpu/intern/gpu_extensions.c
@@ -179,6 +179,10 @@ void GPU_extensions_init(void)
 			GG.npotdisabled = 1;
 	}
 
+	/* make sure double side isn't used by defautl and only getting enabled in places where it's
+	 * really needed to prevent different unexpected behaviors like with intel gme965 card (sergey) */
+	glLightModeli(GL_LIGHT_MODEL_TWO_SIDE, 0);
+
 	GG.os = GPU_OS_UNIX;
 #ifdef _WIN32
 	GG.os = GPU_OS_WIN;
